# ai-training-arc

./: .gitignore  README.md  pyproject.toml  start.ps1  stop.ps1
bench/: ablation_5_2.py  latency_1_1.py  memorize_3_3.py  memory_2_3.py  robustness_4_2.py  train_3_2.py  vram_4_1.py
src/thcm/: __init__.py  config.py
src/thcm/data/: dataloader.py  fetch.py
src/thcm/eval/: __init__.py  robustness.py  vram.py
src/thcm/models/: __init__.py  code_model.py  encoder.py  generator.py  holographic.py  patcher.py  transformer.py
src/thcm/signal/: __init__.py  lowpass.py
src/thcm/training/: __init__.py  auto.py  dashboard.py  losses.py  run.py  trainer.py
src/thcm/utils/: __init__.py  device.py
tests/: test_auto.py  test_code_model.py  test_dashboard.py  test_dataloader.py  test_encoder.py  test_fetch.py  test_generator.py  test_holographic.py  test_losses.py  test_lowpass.py  test_memorization.py  test_patcher.py  test_robustness.py  test_trainer.py  test_transformer.py  test_vram.py
